--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Set variables for colours */
 :root {
     --dark-color: #111;
-    --light-color: #e7e7e7;
+    --light-color: #eee;
     --dark-grey: #404040;
     --medium-grey: #808080;
     --light-gray: #c0c0c0;
