--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,18 @@ img {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(12, 1fr);
     gap: 8px;
     margin: 8px;
 }
 
+.container > * {
+    /* To help see grid */
+    /* background-color: greenyellow; */
+}
+
 h1 {
+    grid-column: 1 / 13;
     font-size: 1.333rem;
     line-height: 1.6rem;
     font-weight: bold;
@@ -49,6 +55,8 @@ h1 {
 }
 
 .image-container {
+    grid-column: 1 / 13;
+    align-self: start;
     position: relative;
 }
 
@@ -61,6 +69,18 @@ h1 {
     color: var(--light-color);
     font-size: 1rem;
     line-height: 1.2rem;
+}
+
+p {
+    grid-column: 1 / 13;
+}
+
+.article-controls {
+    grid-column: 1 / 13;
+}
+
+.ratings {
+    grid-column: 1 / 13;
 }
 
 /* TYPOGRAPHIC BREAKPOINTS */
@@ -140,26 +160,80 @@ h1 {
 /* Group 3 */
 @media (min-width: 600px) {
     .container {
-        grid-template-columns: 2fr 1fr;
         gap: 16px;
         margin: 16px;
+    }
+
+    .image-container {
+        grid-column: 2 / 12;
+    }
+
+    p {
+        grid-column: 2 / 12;
+    }
+
+    .article-controls {
+        grid-column: 2 / 12;
+    }
+
+    .ratings {
+        grid-column: 2 / 12;
+    }
+}
+
+/* Extra breakpoint */
+@media (min-width: 800px) {
+    h1 {
+        grid-column: 2/ 12;
+    }
+
+    .image-container {
+        grid-column: 3 / 11;
+    }
+
+    p {
+        grid-column: 3 / 11;
+    }
+
+    .article-controls {
+        grid-column: 3 / 7;
+    }
+
+    .ratings {
+        grid-column: 7 / 11;
     }
 }
 
 /* Group 4 */
 @media (min-width: 1008px) {
     .container {
-        grid-template-columns: 2fr 2fr;
         margin: 16px auto;
         max-width: 976px;
+    }
+
+    p:first-of-type {
+        grid-column: 3 / 6;
+        grid-row: 2 / 3;
+    }
+
+    .image-container {
+        grid-column: 6 / 11;
     }
 }
 
 /* Group 5 */
 @media (min-width: 1280px) {
     .container {
-        grid-template-columns: 2fr 2fr;
         margin: 16px auto;
         max-width: 1248px;
+    }
+
+    p:first-of-type {
+        grid-column: 3 / 5;
+        grid-row: 2 / 3;
+    }
+
+    .image-container {
+        grid-column: 5 / 11;
     }
 }
