Added scalable class names

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img {
     /* background-color: greenyellow; */
 }
 
-h1 {
+.article-heading {
     grid-column: 1 / 13;
     font-size: 1.333rem;
     line-height: 1.6rem;
@@ -73,7 +73,7 @@ h1 {
     line-height: 1.2rem;
 }
 
-p {
+.article-paragraph {
     grid-column: 1 / 13;
 }
 
@@ -97,7 +97,7 @@ p {
         line-height: 1.375rem;
     }
 
-    h1 {
+    .article-heading {
         font-size: 1.5rem;
         line-height: 1.75rem;
     }
@@ -118,7 +118,7 @@ p {
         line-height: 1.375rem;
     }
 
-    h1 {
+    .article-heading {
         font-size: 2rem;
         line-height: 2.25rem;
     }
@@ -139,7 +139,7 @@ p {
         line-height: 1.333rem;
     }
 
-    h1 {
+    .article-heading {
         font-size: 2rem;
         line-height: 2.222rem;
     }
@@ -170,7 +170,7 @@ p {
         grid-column: 2 / 12;
     }
 
-    p {
+    .article-paragraph {
         grid-column: 2 / 12;
     }
 
@@ -185,7 +185,7 @@ p {
 
 /* Extra breakpoint */
 @media (min-width: 800px) {
-    h1 {
+    .article-heading {
         grid-column: 2/ 12;
     }
 
@@ -193,7 +193,7 @@ p {
         grid-column: 3 / 11;
     }
 
-    p {
+    .article-paragraph {
         grid-column: 3 / 11;
     }
 
@@ -213,7 +213,7 @@ p {
         max-width: 976px;
     }
 
-    p:first-of-type {
+    .article-paragraph:first-of-type {
         grid-column: 3 / 6;
         grid-row: 2 / 3;
     }
@@ -230,7 +230,7 @@ p {
         max-width: 1248px;
     }
 
-    p:first-of-type {
+    .article-paragraph:first-of-type {
         grid-column: 3 / 5;
         grid-row: 2 / 3;
     }
